--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-.
+<html lang="uk">
+<head>
+    <title>PVZ hybid 2.51 downoload-UA.com</title>
+</head>
+<body>
+    <header>
+        <h1>PVZ hybrid download for Windows
+            <img src="https://static-sg.winudf.com/wupload/xy/aprojectadmin/3BTJhtJs.jpg?imageMogr2/thumbnail/750x" width="450px" alt="logo">
+        </h1> 
+        (Завантаження в 64-32 біт може дуже сильно ускладнити задачу тому рекомендуємо перевірити скільки в тебе біт якщо менше 64 то качай другий файл)
+        <br>
+        <h4>ПВЗ гібрид версія 2.51 готові гібриди (Актуальна Версія)</h4>
+        <br>
+        <a href="https://windows.apkpure.com/pvz-hybrid/download">
+        Завантажити WinRAR 64 bit </a>
+
+        <h4>ПВЗ гібрид версія 2.0.88 готові гібриди (Неактуальна версія)</h4>
+        <br>
+        <a href="https://plants-vs-zombies-hybrid.ru.malavida.com/windows/download">
+        Завантажити WinRAR 32 bit </a>
+        <a href="#title2"></a>
+        <a href="#title3"></a>
+        </header>
+    <main>
+        <h2 id="title2"><h2 style="text-align:center; color:darkblue">В ПВЗ гібрид має на старті 6 рослин. 1 має мутацію соняшника та горохостріла дає 25 солнц та атакує невеликим уроном. 2 це соняшний біб який з 1 стадії дає 15 солнц а на 2 25 (В ранніх версіях дає 50). третя рослина це сонце-вишня при активації за кожного зомбі дає 25 солнц. 4 має мутацію горіха та перцю бафає урон піджигая горіх має 4000 хп. 5 це міно-гриб має мутацію міни та соняшного гриба після смерті зомбі він дає 50 солнц. І 6 це кувшинко-горохостріл який кидає ледяним горіхом з авто-наведенням в версії 2.51 коли горіх попадає під вогнище горіха то він тає. </h2>
+        <img src="https://static.lagofast.com/website/image/17188779036364505.webp" width="350px" alt="logo">
+        <p>Зомбі на перших рівнях мають середню силу, поки діло не дойде до нічних атаках</p>
+        <p>Подробніше о стартових зомбі буде нижче</p>
+        <h2 style="text-align:center; color:darkred">Зомбі на 1 рівні не дуже сильні всього навсього армія складається з: звичайного зомбі, зомбі з циліндром та зомбі з ведром.
+        На другому вже трохи складніше там зʼявляється новий зомбі з газетою та він не простий, тому все інше ви побачете в грі</h2>
+        </h2>
+        
+        <h1>PVZ hybrid download for Makbook<img src="https://www.apkwork.com/upload/20240618/e30091e2425355.png" width="450px" alt="logo"></h1>
+        <h4>ПВЗ гібрид версія 2.0.88 готові гібриди (Актуальна версія тільки для Makbook)</h4>
+        <br>
+        <a href="https://plants-vs-zombies-hybrid.ru.malavida.com/windows/download">Завантажити WinRAR </a>
+        <h1> PVZ hybrid download for Chromebook<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKjFc3NGnChfVfR4TFD-Zw_q2Ua2ZqNkEMsQ&s" width="500px" alt="logo"></h1>
+        <h4>ПВЗ гібрид версія 2.0.88 готові гібриди (Актуальна версія також для Chromebook )</h4>
+        <a href="https://plants-vs-zombies-hybrid.ru.malavida.com/windows/download">Завантажити ChromeRAR </a>
+        <h3>Сайт зроблено 27.10.2024</h3>
+        <h3>Сайт оновленно 17.11.2024</h3>
+        <h3>Версія сайту 1.1.7</h3>
+        
+        <h3>Make in Ukraine</h3>
+    </main>
+    <footer>
+        <p>Prodjekt make:</p>
+        <a href="" target="_blank">&copy; PVZ hybrid UA</a>
+    </footer>
+</body>
+</html>
