--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="uk">
 <head>
-    <title>PVZ hybid 2.51 downoload-UA.com</title>
+    <title>PVZ hybid 2.6.1 downoload-UA.com</title>
 </head>
 <body>
     <header>
@@ -9,9 +9,9 @@
         </h1> 
         (Завантаження в 64-32 біт може дуже сильно ускладнити задачу тому рекомендуємо перевірити скільки в тебе біт якщо менше 64 то качай другий файл)
         <br>
-        <h4>ПВЗ гібрид версія 2.51 готові гібриди (Актуальна Версія)</h4>
+        <h4>ПВЗ гібрид версія 2.6.1 готові гібриди (Актуальна Версія)</h4>
         <br>
-        <a href="https://windows.apkpure.com/pvz-hybrid/download">
+        <a href="https://d.cdnpure.com/b/exe/cHZ6LWh5YnJpZC12Mi41XzE3MjkxNTU5NjY2NTZfODllM2RkMjg?_fn=UHZaIEh5YnJpZC5leGU">
         Завантажити WinRAR 64 bit </a>
 
         <h4>ПВЗ гібрид версія 2.0.88 готові гібриди (Неактуальна версія)</h4>
@@ -38,8 +38,8 @@
         <h4>ПВЗ гібрид версія 2.0.88 готові гібриди (Актуальна версія також для Chromebook )</h4>
         <a href="https://plants-vs-zombies-hybrid.ru.malavida.com/windows/download">Завантажити ChromeRAR </a>
         <h3>Сайт зроблено 27.10.2024</h3>
-        <h3>Сайт оновленно 17.11.2024</h3>
-        <h3>Версія сайту 1.1.7</h3>
+        <h3>Сайт оновленно 08.12.2024</h3>
+        <h3>Версія сайту 1.2.1</h3>
         
         <h3>Make in Ukraine</h3>
     </main>
