--- a/index.html
+++ b/index.html
@@ -7,17 +7,12 @@
         <h1>PVZ hybrid download for Windows
             <img src="https://static-sg.winudf.com/wupload/xy/aprojectadmin/3BTJhtJs.jpg?imageMogr2/thumbnail/750x" width="2000px" alt="logo">
         </h1> 
-        (Завантаження в 64-32 біт може дуже сильно ускладнити задачу тому рекомендуємо перевірити скільки в тебе біт якщо менше 64 то качай другий файл)
         <br>
         <h4>ПВЗ гібрид версія 2.6.1 готові гібриди (Актуальна Версія)</h4>
         <br>
         <a href="https://d.cdnpure.com/b/exe/cHZ6LWh5YnJpZC12Mi41XzE3MjkxNTU5NjY2NTZfODllM2RkMjg?_fn=UHZaIEh5YnJpZC5leGU">
         Завантажити WinRAR 64 bit </a>
-
-        <h4>ПВЗ гібрид версія 2.0.88 готові гібриди (Неактуальна версія)</h4>
         <br>
-        <a href="https://plants-vs-zombies-hybrid.ru.malavida.com/windows/download">
-        Завантажити WinRAR 32 bit </a>
         <a href="#title2"></a>
         <a href="#title3"></a>
         </header>
@@ -30,13 +25,7 @@
         На другому вже трохи складніше там зʼявляється новий зомбі з газетою та він не простий, тому все інше ви побачете в грі</h2>
         </h2>
         
-        <h1>PVZ hybrid download for Makbook<img src="https://www.apkwork.com/upload/20240618/e30091e2425355.png" width="2000px" alt="logo"></h1>
-        <h4>ПВЗ гібрид версія 2.0.88 готові гібриди (Актуальна версія тільки для Makbook)</h4>
-        <br>
-        <a href="https://plants-vs-zombies-hybrid.ru.malavida.com/windows/download">Завантажити WinRAR </a>
-        <h1> PVZ hybrid download for Chromebook<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKjFc3NGnChfVfR4TFD-Zw_q2Ua2ZqNkEMsQ&s" width="500px" alt="logo"></h1>
-        <h4>ПВЗ гібрид версія 2.0.88 готові гібриди (Актуальна версія також для Chromebook )</h4>
-        <a href="https://plants-vs-zombies-hybrid.ru.malavida.com/windows/download">Завантажити ChromeRAR </a>
+        <h1><img src="https://www.apkwork.com/upload/20240618/e30091e2425355.png" width="5000px" alt="logo"></h1>
         <h3>Сайт зроблено 27.10.2024</h3>
         <h3>Сайт оновленно 08.12.2024</h3>
         <h3>Версія сайту 1.2.1</h3>
