--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p>Зомбі на перших рівнях мають середню силу, поки діло не дойде до нічних атаках</p>
         <p>Подробніше о стартових зомбі буде нижче</p>
         <h2 style="text-align:center; color:darkred">Зомбі на 1 рівні не дуже сильні всього навсього армія складається з: звичайного зомбі, зомбі з циліндром та зомбі з ведром.
-        На другому вже трохи складніше там зʼявляється новий зомбі з газетою та він не простий, тому все інше ви побачете в грі</h2>
+        На другому вже трохи складніше там зʼявляється новий зомбоні з газетою та він не простий, тому все інше ви побачете в грі</h2>
         </h2>
         
         <h1><img src="https://www.apkwork.com/upload/20240618/e30091e2425355.png" width="800px" alt="logo"></h1>
