--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h4>ПВЗ гібрид версія 2.6.1 готові гібриди (Актуальна Версія)</h4>
         <br>
         <a href="https://d.cdnpure.com/b/exe/cHZ6LWh5YnJpZC12Mi41XzE3MjkxNTU5NjY2NTZfODllM2RkMjg?_fn=UHZaIEh5YnJpZC5leGU">
-        Завантажити WinRAR 64 bit </a>
+        <h1> Завантажити WinRAR 64 bit </h1> </a>
         <br>
         <a href="#title2"></a>
         <a href="#title3"></a>
