--- a/index.html
+++ b/index.html
@@ -1,40 +1,63 @@
+<!DOCTYPE html>
 <html lang="uk">
 <head>
-    <title>PVZ hybid 2.6.1 downoload-UA.com</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PVZ Hybrid 2.6.1 Download-UA</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>PVZ hybrid download for Windows
-            <img src="https://static-sg.winudf.com/wupload/xy/aprojectadmin/3BTJhtJs.jpg?imageMogr2/thumbnail/750x" width="750px" alt="logo">
-        </h1> 
-        <br>
-        <h4>ПВЗ гібрид версія 2.6.1 готові гібриди (Актуальна Версія)</h4>
-        <br>
-        <a href="https://d.cdnpure.com/b/exe/cHZ6LWh5YnJpZC12Mi41XzE3MjkxNTU5NjY2NTZfODllM2RkMjg?_fn=UHZaIEh5YnJpZC5leGU">
-        <h2> Завантажити WinRAR 64 bit </h2> </a>
-        <br>
-        <a href="#title2"></a>
-        <a href="#title3"></a>
-        </header>
+        <h1>PVZ Hybrid Download for Windows</h1>
+        <img src="https://static-sg.winudf.com/wupload/xy/aprojectadmin/3BTJhtJs.jpg?imageMogr2/thumbnail/750x" alt="logo" class="header-image">
+        <h4>ПВЗ гібрид версія 2.6.1 — готові гібриди (Актуальна Версія)</h4>
+        <a href="https://d.cdnpure.com/b/exe/cHZ6LWh5YnJpZC12Mi41XzE3MjkxNTU5NjY2NTZfODllM2RkMjg?_fn=UHZaIEh5YnJpZC5leGU" class="download-link">
+            Завантажити WinRAR 64 bit
+        </a>
+    </header>
     <main>
-        <h2 id="title2"><h2 style="text-align:center; color:darkblue">В ПВЗ гібрид має на старті 6 рослин. 1 має мутацію соняшника та горохостріла дає 25 солнц та атакує невеликим уроном. 2 це соняшний біб який з 1 стадії дає 15 солнц а на 2 25 (В ранніх версіях дає 50). третя рослина це сонце-вишня при активації за кожного зомбі дає 25 солнц. 4 має мутацію горіха та перцю бафає урон піджигая горіх має 4000 хп. 5 це міно-гриб має мутацію міни та соняшного гриба після смерті зомбі він дає 50 солнц. І 6 це кувшинко-горохостріл який кидає ледяним горіхом з авто-наведенням в версії 2.51 коли горіх попадає під вогнище горіха то він тає. </h2>
-        <img src="https://static.lagofast.com/website/image/17188779036364505.webp" width="500px" alt="logo">
-        <p>Зомбі на перших рівнях мають середню силу, поки діло не дойде до нічних атаках</p>
-        <p>Подробніше о стартових зомбі буде нижче</p>
-        <h2 style="text-align:center; color:darkred">Зомбі на 1 рівні не дуже сильні всього навсього армія складається з: звичайного зомбі, зомбі з циліндром та зомбі з ведром.
-        На другому вже трохи складніше там зʼявляється новий зомбоні з газетою та він не простий, тому все інше ви побачете в грі</h2>
-        </h2>
-        
-        <h1><img src="https://www.apkwork.com/upload/20240618/e30091e2425355.png" width="800px" alt="logo"></h1>
-        <h3>Сайт зроблено 27.10.2024</h3>
-        <h3>Сайт оновленно 15.12.2024</h3>
-        <h3>Версія сайту 1.2.4</h3>
-        
-        <h3>Make in Ukraine</h3>
+        <section id="description">
+            <h2>Особливості PVZ Hybrid</h2>
+            <p>
+                В PVZ Hybrid на старті доступно 6 унікальних рослин. Ось основні:
+                <ul>
+                    <li><strong>Соняшниковий горохостріл:</strong> дає 25 сонць та атакує.</li>
+                    <li><strong>Соняшний біб:</strong> дає 15-25 сонць залежно від стадії.</li>
+                    <li><strong>Сонце-вишня:</strong> генерує 25 сонць за кожного зомбі.</li>
+                    <li><strong>Горіх-перець:</strong> підпалює ворогів, має 4000 HP.</li>
+                    <li><strong>Міно-гриб:</strong> після смерті дає 50 сонць.</li>
+                    <li><strong>Кувшинко-горохостріл:</strong> стріляє льодяним горіхом із авто-наведенням.</li>
+                </ul>
+            </p>
+            <img src="https://static.lagofast.com/website/image/17188779036364505.webp" alt="PVZ gameplay" class="description-image">
+            <p>Зомбі на перших рівнях мають середню силу, але в нічних атаках вони стають складнішими.</p>
+        </section>
+        <section id="zombie-info">
+            <h2>Особливості зомбі</h2>
+            <p>На першому рівні зустрічаються:</p>
+            <ul>
+                <li>Звичайний зомбі</li>
+                <li>Зомбі з циліндром</li>
+                <li>Зомбі з ведром</li>
+            </ul>
+            <p>На другому рівні додається:</p>
+            <ul>
+                <li>Зомбоні з газетою — дуже швидкий та небезпечний.</li>
+            </ul>
+            <p>Все інше ви побачите в грі!</p>
+        </section>
+        <section id="updates">
+            <h2>Інформація про сайт</h2>
+            <img src="https://www.apkwork.com/upload/20240618/e30091e2425355.png" alt="Site banner" class="site-banner">
+            <p>Сайт створено: 27.10.2024</p>
+            <p>Сайт оновлено: 15.12.2024</p>
+            <p>Версія сайту: 1.2.4</p>
+            <p><strong>Make in Ukraine</strong></p>
+        </section>
     </main>
     <footer>
-        <p>Prodjekt make:</p>
-        <a href="" target="_blank">&copy; PVZ hybrid UA</a>
+        <p>Проєкт створено:</p>
+        <a href="" target="_blank">&copy; PVZ Hybrid UA</a>
     </footer>
 </body>
 </html>
