--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
             <img src="https://www.apkwork.com/upload/20240618/e30091e2425355.png" alt="Site banner" class="site-banner">
             <p>Сайт створено: 27.10.2024</p>
             <p>Сайт оновлено: 15.12.2024</p>
-            <p>Версія сайту: 1.3.0</p>
+            <p>Версія сайту: 1.3.1</p>
             <p><strong>Make in Ukraine</strong></p>
         </section>
     </main>
     <footer>
-        <p>Проєкт створено:</p>
+        <p>Project Make:</p>
         <a href="" target="_blank">&copy; PVZ Hybrid UA</a>
     </footer>
 </body>
