--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>PVZ Hybrid Download for Windows</h1>
         <img src="https://static-sg.winudf.com/wupload/xy/aprojectadmin/3BTJhtJs.jpg?imageMogr2/thumbnail/750x" alt="logo" class="header-image">
-        <h4>ПВЗ гібрид версія 2.6.1 — готові гібриди (Актуальна Версія)</h4>
+        <h4>ПВЗ гібрид 2.6.1 — готові гібриди (Актуальна Версія)</h4>
         <a href="https://d.cdnpure.com/b/exe/cHZ6LWh5YnJpZC12Mi41XzE3MjkxNTU5NjY2NTZfODllM2RkMjg?_fn=UHZaIEh5YnJpZC5leGU" class="download-link">
             Завантажити WinRAR 64 bit
         </a>
