--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PVZ Hybrid 2.6.1 Download-UA</title>
+    <title>PVZ Hybrid Download-UA</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>PVZ Hybrid Download for Windows</h1>
         <img src="https://static-sg.winudf.com/wupload/xy/aprojectadmin/3BTJhtJs.jpg?imageMogr2/thumbnail/750x" alt="logo" class="header-image">
-        <h4>ПВЗ гібрид 2.6.1 — готові гібриди (Актуальна Версія)</h4>
-        <a href="https://d.cdnpure.com/b/exe/cHZ6LWh5YnJpZC12Mi41XzE3MjkxNTU5NjY2NTZfODllM2RkMjg?_fn=UHZaIEh5YnJpZC5leGU" class="download-link">
+        <h4>ПВЗ гібрид 3.0.0 — готові гібриди (Актуальна Версія)</h4>
+        <a href="https://d.cdnpure.com/b/exe/cHZ6LWh5YnJpZC12Mi41XzE3MjkxNTU5NjY2NTZfODllM2RkMjg?_fn=UHZaIEh5YnJpZC5leGU"download-link">
             Завантажити WinRAR 64 bit
         </a>
     </header>
